[build-system]
requires = ["setuptools", "setuptools-gettext"]
build-backend = "setuptools.build_meta"

[project]
name = "zenmap"
license = {file = "LICENSE", content-type = "text/plain"}
dynamic = ["version"]
authors = [{name = "The Nmap Project"}]
description = "Nmap frontend and results viewer"
readme = {file = "README", content-type = "text/plain"}
dependencies = [
  "PyGObject",
]
requires-python = ">= 3.8"

[project.urls]
Homepage = "https://nmap.org/zenmap/"
Documentation = "https://nmap.org/book/zenmap.html"
Repository = "https://github.com/nmap/nmap.git"
Issues = "https://github.com/nmap/nmap/issues"
Changelog = "https://nmap.org/changelog"

[project.gui-scripts]
zenmap = "zenmapGUI.App:run"

[project.scripts]
ndiff = "ndiff:run_main"

[tool.setuptools]
packages = [
"zenmapCore",
"zenmapCore.data.config",
"zenmapCore.data.docs",
"zenmapCore.data.locale",
"zenmapCore.data.misc",
"zenmapCore.data.pixmaps",
"zenmapCore.data.pixmaps.radialnet",
"zenmapGUI",
"zenmapGUI.higwidgets",
"radialnet",
"radialnet.bestwidgets",
"radialnet.core",
"radialnet.gui",
"radialnet.util",
]
py-modules = ["ndiff"]

[tool.setuptools.dynamic]
version = {attr = "zenmapCore.Version.VERSION"}

[tool.setuptools.package-data]
"zenmapCore.data.pixmaps" = ["*.gif", "*.png"]
"zenmapCore.data.pixmaps.radialnet" = ["*.png"]
"zenmapCore.data.config" = ["zenmap.conf", "scan_profile.usp", "zenmap_version"]
"zenmapCore.data.docs" = ["*.html"]
"zenmapCore.data.locale" = ["*/LC_MESSAGES/zenmap.mo"]
"zenmapCore.data.misc" = ["*.xml"]

[tool.setuptools-gettext]
source_dir = "zenmapCore/data/locale"
build_dir = "zenmapCore/data/locale"
