[package]
name = "nmap-bin"
version = "7.98.1"
edition = "2021"
authors = ["Nmap Project Contributors"]
description = "Network discovery and security auditing utility - Rust implementation"
license = "NPSL"
repository = "https://github.com/nmap/nmap"
homepage = "https://nmap.org"

[[bin]]
name = "nmap"
path = "src/main.rs"

[dependencies]
nmap-core = { path = "../nmap-core" }
nmap-cli = { path = "../nmap-cli" }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"