[package]
name = "nmap-os-detect"
version = "0.1.0"
edition = "2021"

[dependencies]
nmap-core = { path = "../nmap-core" }
nmap-net = { path = "../nmap-net" }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pnet = "0.34"
rand = "0.8"
log = "0.4"