[package]
name = "nmap-output"
version = "0.1.0"
edition = "2021"

[dependencies]
nmap-net = { path = "../nmap-net" }
nmap-core = { path = "../nmap-core" }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
quick-xml = { version = "0.31", features = ["serialize"] }
chrono = { version = "0.4", features = ["serde"] }