[package]
name = "nmap-output"
version = "0.1.0"
edition = "2021"

[dependencies]
nmap-net = { path = "../nmap-net" }
nmap-core = { path = "../nmap-core" }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
quick-xml = { version = "0.31", features = ["serialize"] }
chrono = { version = "0.4", features = ["serde"] }
# New dependencies for enhanced reporting
printpdf = "0.7"
csv = "1.3"
rusqlite = { version = "0.31", features = ["bundled"] }
tera = "1.19"  # Template engine for HTML
base64 = "0.21"  # For embedding assets in HTML
uuid = { version = "1.6", features = ["v4"] }  # For generating unique IDs