[package]
name = "nmap-service-detect"
version = "0.1.0"
edition = "2021"

[dependencies]
nmap-core = { path = "../nmap-core" }
nmap-net = { path = "../nmap-net" }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.0"
log = "0.4"
base64 = "0.22"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "signature_performance"
harness = false